# TP2-ED

./: .gitignore  Makefile  README_CLEANUP.txt  cleanup_script.ps1  in.txt  metrics.json  out.txt  test_output.txt
include/: adjacencia.hpp  armazem.hpp  escalonador.hpp  evento.hpp  fila.hpp  fila.tpp  graph.hpp  hashTable.hpp  hashTable.tpp  heap.hpp  lista.hpp  lista.tpp  metricas.hpp  node.hpp  node.tpp  pacote.hpp  pacote.tpp  pilha.hpp  pilha.tpp  relogio.hpp  relogioDiscreto.hpp  transporte.hpp  utils.hpp  vetor.hpp  vetor.tpp
inputs/: baseline.in.txt.meta.json  expA_10armazens.in.txt  expA_10armazens.in.txt.meta.json  expA_12armazens.in.txt  expA_12armazens.in.txt.meta.json  expA_15armazens.in.txt  expA_15armazens.in.txt.meta.json  expA_17armazens.in.txt  expA_17armazens.in.txt.meta.json  expA_18armazens.in.txt.meta.json  expA_20armazens.in.txt  expA_24armazens.in.txt  expA_24armazens.in.txt.meta.json  expA_28armazens.in.txt.meta.json  expA_32armazens.in.txt  expA_32armazens.in.txt.meta.json  expA_36armazens.in.txt  expA_36armazens.in.txt.meta.json  expA_40armazens.in.txt.meta.json  expA_5armazens.in.txt.meta.json  expA_8armazens.in.txt  expA_8armazens.in.txt.meta.json  expB_10window.in.txt  expB_10window.in.txt.meta.json  expB_12window.in.txt  expB_15window.in.txt  expB_15window.in.txt.meta.json  expB_17window.in.txt  expB_17window.in.txt.meta.json  expB_20window.in.txt.meta.json  expB_24window.in.txt  expB_24window.in.txt.meta.json  expB_28window.in.txt  expB_32window.in.txt  (+48 more)
python/: analysis.ipynb  datagen.py  df.csv  exp.ipynb  pyproject.toml
(+215 files in other folders)
